--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "start:prod": "node dist/main",
     "start:preprod": "npm install -g @nestjs/cli && npm run build && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e:watch": "jest --coverage --watch --config ./jest-e2e.json",
-    "test:e2e": "jest --config ./jest-e2e.json",
+    "test": "jest --config ./jest-e2e.json",
     "jest:clearCache": "jest --clearCache"
   },
   "dependencies": {
