--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,6 +7,7 @@ on:
     branches: 
       - production 
       - staging
+      - docker_build
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -91,3 +92,22 @@ jobs:
           version_label: auxillo-${{ github.run_id }}
           region: us-east-2
           deployment_package: publish${{ github.run_id }}.zip
+
+  docker_build:
+    runs-on: ubuntu-latest
+    needs: [build_prod]
+    if: github.ref == 'refs/heads/docker_build'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: gvgodfrey #${{ secrets.DOCKER_USER }}
+          password: dckr_pat_CoKtyKzWf5ofHWG9cBQCL4HbEl0 #${{ secrets.DOCKER_PASS }}
+      - name: Build Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: gvgodfrey/auxillorx-cache:latest
