--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -95,19 +95,18 @@ jobs:
 
   docker_build:
     runs-on: ubuntu-latest
-    # needs: [build_prod]
     if: github.ref == 'refs/heads/docker_build'
     steps:
       - uses: actions/checkout@v2
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: gvgodfrey #${{ secrets.DOCKER_USER }}
-          password: dckr_pat_CoKtyKzWf5ofHWG9cBQCL4HbEl0 #${{ secrets.DOCKER_PASS }}
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: gvgodfrey/auxillorx-cache:latest
+          tags: ${{ secrets.DOCKER_TAG }}
